--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "^5.5.3",
     "vite": "^5.4.0",
     "vite-plugin-minify": "^2.0.0"
+  },
+  "dependencies": {
+    "@splidejs/splide": "^4.1.4"
   }
 }
